cleanup of <br> to <br/>

--- a/editor/popups/about.html
+++ b/editor/popups/about.html
@@ -60,17 +60,17 @@
 					<table width="380" border="0" cellpadding="0" cellspacing="0" style="height: 260px; background-color: #F7F7F7; border-width: 0 2 2 2; border-style: solid; border-color: #FFFFFF; padding: 5px;">
 						<tr>
 							<td style="font-family: arial, verdana, helvetica, sans serif; font-size: 10px;">
-								An open source cross-browser WYSIWYG editor.<br><br>
-								Version 1.4.7<br>
+								An open source cross-browser WYSIWYG editor.<br/><br/>
+								Version 1.4.7<br/>
 
 								Copyright &copy 2006
 								<a href="http://www.openwebware.com/" target="_blank">openWebWare.com</a>
-								<br>
+								<br/>
 								All Rights Reserved
-								<br>
-								<br>
+								<br/>
+								<br/>
 
-								<br>
+								<br/>
 								<b style="font-size: 12px;">Resources:</b>
 								<ul> 
 									<li>
